objects/FSL_Approval_Code__c.object
<CustomObject>
    <description>This object is to capture master Approval Codes</description>
    <fields>
        <fullName>Approval_Code_Auth_Number__c</fullName>
        <externalId>true</externalId>
        <label>Approval Code - Auth Number</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Approval_Code__c</fullName>
        <label>Approval Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorization_Number__c</fullName>
        <label>Authorization Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WWID__c</fullName>
        <label>WWID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>FSL Approval Code</label>
    <nameField>
        <displayFormat>AC-{00000}</displayFormat>
        <label>FSL Approval Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FSL Approval Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>